Updated the waybar view

--- a/.config/waybar/modules/clock.css
+++ b/.config/waybar/modules/clock.css
@@ -1,12 +1,10 @@
 #clock {
     background: @background0;
-    color: @text0;
-    padding: 0 10px;
     border-radius: 10px;
-    transition: background 0.3s;
+    padding: 0 10px;
 }
 
 #clock:hover {
-    background: @background1;
+    background-color: @background1;
     color: @text1;
 }
