--- a/.config/waybar/modules/battery.css
+++ b/.config/waybar/modules/battery.css
@@ -1,24 +1,10 @@
 #battery {
-    font-family: 'Fira Code', monospace;
-    color: @text0;
+    background: @background0;
     border-radius: 10px;
-    background-color: @background0;
     padding: 0 10px;
-    transition: background 0.3s;
 }
 
 #battery:hover {
     background: @background1;
     color: @text1;
-}
-
-#battery.warning {
-    background-color: @red;
-    color: @background0;
-}
-
-#battery.critical {
-    background-color: @red;
-    color: @background0;
-    font-weight: bold;
 }
