--- a/.config/waybar/modules/network.css
+++ b/.config/waybar/modules/network.css
@@ -1,9 +1,7 @@
 #network {
-    color: @text0;
+    background: @background0;
     border-radius: 10px;
-    background-color: @background0;
     padding: 0 10px;
-    transition: background 0.3s;
 }
 
 #network:hover {
